# actual-python

./: .gitignore  README.md  main.py  mkdocs.yml  pyproject.toml
.github/workflows/: deploy-gh-pages.yml
docs/: index.md
docs/setup/: index.md  install-code-editor.md  install-python.md
