[project]
name = "actual-python"
version = "0.1.0"
description = "Actually Learn to Develop Software using Python"
readme = "README.md"
license = "LICENSE"
requires-python = ">=3.10"
dependencies = []

[dependency-groups]
dev = [
    "mkdocs>=1.6.1",
    "mkdocs-git-authors-plugin>=0.9.5",
    "mkdocs-git-committers-plugin-2>=2.5.0",
    "mkdocs-git-revision-date-localized-plugin>=1.4.7",
    "mkdocs-material>=9.6.14",
]
